src/index.css
/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  font-family: "Didact Gothic", sans-serif;
  background-color: rgb(21, 89, 148);
  color: white;
}

body {
  display: flex;
  justify-content: center;
}

a:link {
  text-decoration: none;
  color: rgb(21, 89, 148);
}

a:visited {
  text-decoration: none;
  color: rgb(21, 89, 148);

}

a:hover {
  text-decoration: none;
}

a:active {
  text-decoration: none;
}
/* ********* on every page ********** */

.App {
  padding: 8px;
  display: grid;
  grid-template-columns: repeat(4, 100px);
  grid-template-rows: repeat(3, 100px);
}

.headshot-container {
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 3;
  border-radius: 5px;
  border: 5px solid rgba(0, 0, 0, 0);
  outline: 1px solid white;
  max-width: 200%;
}

.headshot {
  grid-column-start: 1;
  grid-column-end: 3;
  max-width: 100%;
  border-radius: 5px;

}

.contact {
  grid-column-start: 3;
  grid-column-end: 5;
  grid-row-start: 1;
  grid-row-end: 3;
  display: grid;
  grid-template-columns: 66px 68px 66px;
  grid-template-rows: repeat(3, 66px);
}

.envelope {
  display: flex;
  grid-column-start: 2;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  justify-content: center;
  align-items: center;
  height: 100%;
  outline: 1px solid white;
}

.linkedin {
  display: flex;
  grid-column-start: 3;
  grid-column-end: 3;
  grid-row-start: 1;
  grid-row-end: 2;
  justify-content: center;
  align-items: center;
  height: 100%;
  outline: 1px solid white;
}

.github {
  display: flex;
  grid-column-start: 1;
  grid-column-end: 2;
  grid-row-start: 1;
  grid-row-end: 2;
  justify-content: center;
  align-items: center;
  font-size: 1.0em;
  outline: 1px solid white;
}


.contact-icons {
  font-size: 2.8em;
  color: rgba(255, 255, 255, 1);
}

.contact-icons:hover {
  font-size: 3.8em;
}

/******** Homepage links: About and Projects ********/
.links {
  display: flex;
  flex-direction: column;
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 2;
  grid-row-end: 4;
  justify-content: space-around;
  align-items: center; 
  font-size: 1.8em;
  outline: 1px solid white;
  margin-bottom: -2px;
}

.about-link, .projects-link{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  width: 170px;
  height: 45px;
  border-radius: 5px;
}

.about-link:hover {
  background-color: #688299 ;
  border-radius: 5px;
}
.projects-link:hover {
  background-color: #688299 ;
  border-radius: 5px;
}

.about {
  display: flex;
  flex-wrap: wrap;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 3;
  padding-left: 5px;
  padding-right: 3px;
  outline: 1px solid white;
}
.about a{
  color: black;
}

.about p:nth-of-type(1) {
  margin-top: 8px;
  margin-bottom: 0;
}

.about p:nth-of-type(2) {
  margin-top: 8px;
  padding-bottom: 10px;
}

.projects {
  display: grid;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 3;
  font-size: 2em;
  grid-template-columns: repeat(2, 100px);
  grid-template-rows: repeat(2, 80px) 200px;
  outline: 1px solid white;
  padding-top: 7px;
}

.battleTanks-link {
  justify-self: center;
  align-self: center;
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 1;
}

.unscramble-link {
  justify-self: center;
  align-self: center;
  grid-column-start: 3;
  grid-column-end: 5;
  grid-row-start: 1;
}

.parity-link {
  justify-self: center;
  align-self: top;
  grid-column-start: 3;
  grid-column-end: 5;
  grid-row-start: 2;
}

.adventure-link {
  justify-self: center;
  align-self: top;
  grid-column-start: 1;
  grid-column-end: 3;
  grid-row-start: 2;
  font-size: 0.8em;
}

.project-text-wrapper {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 3;
  display: grid;
  grid-template-columns: repeat(4, 100px);
  grid-template-rows: 50px 143px 25px 350px;;

}
.project-text-container {
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 1;
}

.project-header {
  display: flex;
  justify-content: center;
  align-self: center;
  grid-column-start: 1;
  grid-column-end: 5;
  
}

.project-text {
  margin: 0;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 2;
  overflow: auto;
  padding:4px;
  outline: 1px solid white;
  text-indent: 25px;
  text-align: justify;
}

.project-video {
  justify-content: center;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 4;
  outline: 1px solid white;

}
video{
  width: 400px;
  padding: 5px;
}

.project-links {
  display: flex;
  justify-content: space-around;
  margin-left: -1px;
  padding: 10px 0;
  grid-column-start: 1;
  grid-column-end: 5;
  grid-row-start: 3;
  border-left: 1px solid white;
  border-right: 1px solid white;
  width: 402px;
}

.project-links a {
  text-decoration: none;
  color: white;
  padding:2px 8px;
  border-radius: 5px;

}

.project-links a:hover {
  color: rgb(51, 122, 183);
  text-decoration: none;
  background-color: white;
  padding:2px 8px;
  border-radius: 5px;
}

.logo {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  width: 190px;
  height: 65px;
  border-radius: 5px;
}
.projPageLogo {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
  width: 402px;
  height: 35px;
  flex-shrink: 0;
}

.BattleTanksLogo {
  font-family: "Contrail One", cursive;
  font-size: 25px;

}

.UnscrambleLogo {
  font-family: "Gaegu", cursive;
  font-size: 30px;

}

.ParityLogo {
  font-family: "Press Start 2P", cursive;
  font-size: 15px;
  color: black;
}

.AdventchureTymeLogo {
  font-size: 22px;
  color: black;
}

.logo:hover {
  background-color: #688299 ;
  border-radius: 5px;
}

@media (min-width: 1000px) {
  .App {
    padding-top: 5%;
    display: float;
    /* grid-template-columns: repeat(10, 100px);
    grid-template-rows: repeat(6, 100px); */
  }

  .project-header {
    display: flex;
    justify-content: flex-center;
    align-self: center;
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 3
  } 

  .project-text-wrapper {
    grid-column-start: 1;
    grid-column-end: 10;
    grid-row-start: 1; 
    display: grid;
    grid-template-columns: repeat(10, 100px);
    grid-template-rows: 100px 100px 50px repeat(4, 100px);
  }

  .project-text-container {
    grid-column-start: 1;
    grid-column-end: 10;
    grid-row-start: 1; 
    display: grid;
    grid-template-columns: repeat(10, 100px);
    grid-template-rows: 100px 100px 50px repeat(4, 100px);
  }
  
  .project-text {
    margin: 0;
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 4;
    height:200px;
    overflow: scroll;
    padding:4px;
    outline: 1px solid white;
    text-indent: 25px;
    text-align: justify;
  }
  
  .project-video {
    justify-self: center;
    grid-column-start: 7;
    grid-column-end: 9;
    grid-row-start: 1;
    outline: 1px solid white;
    margin-left: 25px;
  }

  video{
    padding: 5px;
    width: 604px;
  }

  .project-links {
    display: flex;
    margin-left: -1;
    padding:10;
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 6;
    border-left: 1px solid white;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    width: 402px;
    height: 45px;
  } 
  
  
} 

